# biobot_playground

./: .gitignore  README.md
defog_arm_neon/: algo.cpp  algo.h
nlp/nltk/: ngram1.py  postag1.py  tokenize1.py  tokenize2.py  tokenize3.py
opengl/: makefile
opengl/include/glad/: glad.h
opengl/src/: camera.h  main.cpp  shader.cpp  shader.h  test.cpp  test.h
opengl/src/shaders/: cubeshader.fs  cubeshader.vs  lightcaster.fs  lightcastershader.fs  lightmapshader.fs  materialshader.fs  test.vs  textshader.fs  textshader.vs  transformshader.vs
prototype/automata/: Assembly-CSharp.csproj  automata.sln
prototype/automata/ProjectSettings/: ProjectSettings.asset
prototype/tide/shaders/: cell.fs  cell.vs  cubeshader.fs  cubeshader.vs  lightmapshader.fs  test.fs
prototype/tide/src/: camera.h  cell.cpp  cell.h  gameobject.cpp  gameobject.h  interfaces.h  main.cpp
python100/: samples.py
python100/tf/: test1.py
telegrambot&scrapy/: main.py  myparser.py  note.md  test.py
trash/MyApplication/app/: build.gradle
trash/cpp/: CMakeLists.txt
trash/cpp/io/: CMakeLists.txt  io.cpp  io.md  iotest.txt
trash/cpp/template/: CMakeLists.txt  template.cpp
trash/filter/: filter.cpp
trash/gl/: 3dshader.vs  Shader.cpp  Shader.fs  Shader.vs  gl.aps  gl.cpp  resource.h  stdafx.cpp
trash/go/channel/: channel.go
trash/go/icmp/: icmp.go
trash/socket/: client  client.c  client_un  client_un.c  epoll_server.c  ispclient.h  server  server_un  server_un.c  socketClient.h  statemachine.cc  statemachine.h  test.cpp
work/defog/: makefile
work/guide_filter/: makefile
(+36 files in other folders)
